--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="navbar navbar-default navbar-static-top">
 		<div class="container">
-			<a href="/" class="navbar-brand">
+			<a href="/bo3-zombies-calculator/" class="navbar-brand">
 				BO3 Zombies Calculator
 			</a>
 		</div>
