--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="navbar navbar-default navbar-static-top">
 		<div class="container">
 			<a href="/bo3-zombies-calculator/" class="navbar-brand">
-				BO3 Zombies Calculator
+				Black Ops 3 Zombies Calculator
 			</a>
 		</div>
 	</div>
@@ -35,13 +35,27 @@
 				<div class="jumbotron">
 					<div>
 						<form id="form" autocomplete="off">
-							<div class="form-group">
-								<label for="number-players">Number of players:</label>
-								<input type="number" min="1" max="4" class="form-control" id="number-players" placeholder="1 - 4"></input>
+							<div class="form-group row">
+								<label for="number-players" class="form-control-label col-sm-2">Number of players:</label>
+								<div class="col-sm-10">
+									<input type="number" min="1" max="4" class="form-control" id="number-players" placeholder="1 - 4"></input>
+								</div>
 							</div>
-							<div class="form-group">
-								<label for="round">Round:</label>
-								<input type="number" min="1" class="form-control" id="round" placeholder="round #"></input>
+							<div class="form-group row">
+								<label for="round" class="form-control-label col-sm-2">Round:</label>
+								<div class="col-sm-10">
+									<input type="number" min="1" class="form-control" id="round" placeholder="round #"></input>
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="double-xp" class="form-control-label col-sm-2">Is Double XP on?</label>
+								<div class="col-sm-10">
+									<div class="checkbox">
+										<label>
+											<input type="checkbox" id="double-xp">
+										</label>
+									</div>
+								</div>
 							</div>
 							<input type="submit" class="btn btn-success" name="Calculate!"></input>
 						</form>
@@ -91,6 +105,10 @@
 							<button class="btn btn-success" id="shuffle-btn">Shuffle songs</button>
 						</div>
 					</div>
+					<br>
+					<footer>
+						Developed by Jordan Turley. Zombie count and health calculations are from <a href="http://zombulator.com/" target="_blank">Zombulator</a>
+					</footer>
 				</div>
 			</div>
 		</div>
