Add an ad at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
 					<br>
 					<footer>
 						Developed by Jordan Turley. Zombie count and health calculations are from <a href="http://zombulator.com/" target="_blank">Zombulator</a>
+						<br><br>
+						<div style="text-align: center;">
+							<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+							<!-- BO3 Zombies Calculator -->
+							<ins class="adsbygoogle"
+							style="display:inline-block;width:728px;height:90px"
+							data-ad-client="ca-pub-9209721482902674"
+							data-ad-slot="4612986539"></ins>
+							<script>
+								(adsbygoogle = window.adsbygoogle || []).push({});
+							</script>
+						</div>
 					</footer>
 				</div>
 			</div>
