Add message above ad

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 						Developed by Jordan Turley. Zombie count and health calculations are from <a href="http://zombulator.com/" target="_blank">Zombulator</a>
 						<br><br>
 						<div style="text-align: center;">
+							Sorry about the ad btw
+							<br>
 							<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 							<!-- BO3 Zombies Calculator -->
 							<ins class="adsbygoogle"
